[package]
name = "scalar-config"
version = "0.0.1"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anemo.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
bcs.workspace = true
csv.workspace = true
dirs.workspace = true
fastcrypto.workspace = true
once_cell.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_with.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
prometheus.workspace = true

narwhal-config.workspace = true
sui-protocol-config.workspace = true
sui-storage.workspace = true
scalar-keys.workspace = true
scalar-types.workspace = true
workspace-hack.workspace = true

[target.'cfg(msim)'.dependencies]
sui-simulator.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
scalar-types = { workspace = true, features = ["test-utils"] }
