[package]
name = "reth-rpc-builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Helpers for configuring RPC"

[dependencies]
# reth
reth-primitives = { path = "../../reth/crates/primitives" }
reth-ipc = { path = "../../reth/crates/rpc/ipc" }
reth-interfaces = { path = "../../reth/crates/interfaces" }
reth-network-api = { path = "../../reth/crates/net/network-api" }
reth-provider = { path = "../../reth/crates/storage/provider" }
reth-rpc = { path = "../scalar-eth-rpc" }
reth-rpc-api = { path = "../../reth/crates/rpc/rpc-api" }
reth-rpc-engine-api = { path = "../../reth/crates/rpc/rpc-engine-api" }
reth-rpc-types = { path = "../../reth/crates/rpc/rpc-types" }
reth-tasks = { path = "../../reth/crates/tasks" }
reth-transaction-pool = { path = "../../reth/crates/transaction-pool" }
reth-rpc-types-compat = { path = "../../reth/crates/rpc/rpc-types-compat" }

# rpc/net
jsonrpsee = { version = "0.20", features = ["server"] }
tower-http = { version = "0.4", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
hyper = "0.14"

# metrics
reth-metrics = { path = "../../reth/crates/metrics", features = ["common"] }
metrics = "0.21.1"

# misc
strum = { version = "0.25", features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
tracing = "0.1.0"

[dev-dependencies]
reth-tracing = { path = "../../reth/crates/tracing" }
reth-rpc-api = { path = "../../reth/crates/rpc/rpc-api", features = ["client"] }
reth-transaction-pool = { path = "../../reth/crates/transaction-pool", features = ["test-utils"] }
reth-provider = { path = "../../reth/crates/storage/provider", features = ["test-utils"] }
reth-network-api = { path = "../../reth/crates/net/network-api" }
reth-interfaces = { path = "../../reth/crates/interfaces", features = ["test-utils"] }
reth-beacon-consensus = { path = "../../reth/crates/consensus/beacon" }
reth-payload-builder = { path = "../../reth/crates/payload/builder", features = ["test-utils"] }

tokio = { version = "1.21", features = ["rt", "rt-multi-thread"] }
serde_json = "1.0.94"
