[package]
name = "reth-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Reth RPC implementation"
[dependencies]
# reth
reth-interfaces = { path = "../../reth/crates/interfaces" }
reth-primitives = { path = "../../reth/crates/primitives" }
reth-rpc-api = { path = "../../reth/crates/rpc/rpc-api" }
reth-rpc-types = { path = "../../reth/crates/rpc/rpc-types" }
reth-provider = { path = "../../reth/crates/storage/provider", features = ["test-utils"] }
reth-transaction-pool = { path = "../../reth/crates/transaction-pool", features = ["test-utils"] }
reth-network-api = { path = "../../reth/crates/net/network-api" }
reth-rpc-engine-api = { path = "../../reth/crates/rpc/rpc-engine-api" }
reth-revm = { path = "../../reth/crates/revm" }
reth-tasks = { path = "../../reth/crates/tasks" }
reth-consensus-common = { path = "../../reth/crates/consensus/common" }
reth-rpc-types-compat = { path = "../../reth/crates/rpc/rpc-types-compat" }
lazy_static = "*"

# eth
alloy-rlp = "0.3"
alloy-dyn-abi = "0.5"
alloy-primitives = "0.5"
alloy-sol-types = "0.5"
revm = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze", default-features = false, features = [
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_no_base_fee",
] }
revm-primitives = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze", features = ["serde"], default-features = false }

# rpc
jsonrpsee = { version = "0.20" }
http = "0.2.8"
http-body = "0.4.5"
hyper = "0.14.24"
jsonwebtoken = "8"

## required for optimism sequencer delegation
reqwest = { version = "0.11", default-features = false, features = ["rustls"], optional = true }

# async
async-trait = "0.1.68"
tokio = { version = "1.21", features = ["sync"] }
tower = "0.4"
tokio-stream = { version =  "0.1.11", features = ["sync"] }
tokio-util = "0.7"
pin-project = "1.0.12"
rayon = "1.7"

# metrics
reth-metrics = { path = "../../reth/crates/metrics" }
metrics = "0.21.1"

# misc
bytes = "1.5"
secp256k1 = { version = "0.27.0", default-features = false, features = ["global-context", "rand-std", "recovery"] }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0.94"
thiserror = "1.0"
rand = "0.8.5"
tracing = "0.1.0"
tracing-futures = "0.2"
schnellru = "0.2"
futures = "0.3.26"
derive_more = "0.99"

[dev-dependencies]
jsonrpsee = { version = "0.20", features = ["client"] }
assert_matches = "1.5.0"
tempfile = "3.8"
reth-interfaces = { path = "../../reth/crates/interfaces", features = ["test-utils"] }

[features]
optimism = [
    "dep:reqwest",
    "reth-primitives/optimism",
    "reth-rpc-types-compat/optimism",
    "reth-network-api/optimism",
    "reth-provider/optimism",
    "reth-transaction-pool/optimism",
]
