[package]
name = "scalar-genesis-builder"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
bcs.workspace = true
camino.workspace = true
fastcrypto.workspace = true
move-binary-format = { path = "../../sui/external-crates/move/crates/move-binary-format" }
move-core-types = { path = "../../sui/external-crates/move/crates/move-core-types" }
rand.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tracing.workspace = true
prometheus.workspace = true

shared-crypto = { path = "../../sui/crates/shared-crypto" }
sui-execution = { path = "../../sui/sui-execution" }
sui-framework = { path = "../../sui/crates/sui-framework" }
sui-framework-snapshot = { path = "../../sui/crates/sui-framework-snapshot" }
sui-protocol-config = { path = "../../sui/crates/sui-protocol-config" }
sui-config = { path = "../../sui/crates/sui-config" }
sui-types = { path = "../../sui/crates/sui-types" }
workspace-hack = { path = "../../sui/crates/workspace-hack" }
[target.'cfg(msim)'.dependencies]
sui-simulator = { path = "../../sui/crates/sui-simulator" }

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
sui-types = { path = "../../sui/crates/sui-types", features = ["test-utils"] }
