[package]
name = "scalar-json-rpc-types"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
fastcrypto.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
colored.workspace = true
itertools.workspace = true
tracing.workspace = true
bcs.workspace = true
sui-protocol-config.workspace = true
sui-macros.workspace = true
sui-enum-compat-util.workspace = true
enum_dispatch.workspace = true
json_to_table.workspace = true
tabled.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
#move-bytecode-utils.workspace = true

mysten-metrics.workspace = true
scalar-types.workspace = true
scalar-json.workspace = true
workspace-hack.workspace = true
move-bytecode-utils.workspace = true

[dev-dependencies]
scalar-types = { workspace = true, features = ["test-utils"] }
