[package]
name = "scalar-json-rpc"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
arc-swap.workspace = true
fastcrypto.workspace = true
jsonrpsee.workspace = true
hyper.workspace = true
itertools.workspace = true
indexmap.workspace = true
tower.workspace = true
axum.workspace = true
tower-http.workspace = true

move-core-types = { path = "../../sui/external-crates/move/crates/move-core-types" }
move-bytecode-utils = { path = "../../sui/external-crates/move/crates/move-bytecode-utils" }
move-binary-format = { path = "../../sui/external-crates/move/crates/move-binary-format" }
move-package = { path = "../../sui/external-crates/move/crates/move-package" }

prometheus.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["full"] }
signature.workspace = true
thiserror.workspace = true
bcs.workspace = true
eyre.workspace = true
once_cell.workspace = true
serde_json.workspace = true

tap.workspace = true

sui-core = { path = "../scalar-core", package = "scalar-core" }
sui-storage = { path = "../../sui/crates/sui-storage" }
sui-types = { path = "../../sui/crates/sui-types" }
sui-json = { path = "../../sui/crates/sui-json" }
sui-json-rpc-api = { path = "../../sui/crates/sui-json-rpc-api" }
sui-open-rpc = { path = "../../sui/crates/sui-open-rpc" }
sui-open-rpc-macros = { path = "../../sui/crates/sui-open-rpc-macros" }
sui-protocol-config = { path = "../../sui/crates/sui-protocol-config" }
sui-json-rpc-types = { path = "../../sui/crates/sui-json-rpc-types" }
sui-transaction-builder = { path = "../../sui/crates/sui-transaction-builder" }
mysten-metrics = { path = "../../sui/crates/mysten-metrics" }
shared-crypto = { path = "../../sui/crates/shared-crypto" }
typed-store-error = { path = "../../sui/crates/typed-store-error" }
cached.workspace = true
workspace-hack = { path = "../../sui/crates/workspace-hack" }

[dev-dependencies]
mockall.workspace = true
expect-test.workspace = true
sui-types = { path = "../../sui/crates/sui-types", features = ["test-utils"] }
telemetry-subscribers = { path = "../../sui/crates/telemetry-subscribers" }
