[package]
name = "scalar-kvstore"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-s3.workspace = true
async-trait.workspace = true
backoff.workspace = true
base64-url.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true, features = ["backtrace"] }
prometheus.workspace = true
serde.workspace = true
bcs.workspace = true
tracing.workspace = true
mysten-metrics.workspace = true
scalar-core.workspace = true
scalar-types.workspace = true
scalar-config.workspace = true
scalar-storage.workspace = true
workspace-hack.workspace = true
