[package]
name = "scalar-kvstore"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-s3.workspace = true
async-trait.workspace = true
backoff.workspace = true
base64-url.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true, features = ["backtrace"] }
prometheus.workspace = true
serde.workspace = true
bcs.workspace = true
tracing.workspace = true
mysten-metrics = { path = "../../sui/crates/mysten-metrics" }
scalar-core = { path = "../scalar-core" }
sui-types = { path = "../../sui/crates/sui-types" }
sui-config = { path = "../../sui/crates/sui-config" }
sui-storage = { path = "../../sui/crates/sui-storage" }
workspace-hack = { path = "../../sui/crates/workspace-hack" }
