[package]
name = "scalar-move"
version = "0.0.0"
authors = ["Scalar <tai@scalar.org>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
bcs.workspace = true
colored.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
schemars.workspace = true
tracing.workspace = true
sui-macros.workspace = true
#sui-framework.workspace = true
scalar-types.workspace = true
scalar-json-rpc-types.workspace = true
sui-enum-compat-util.workspace = true
sui-protocol-config.workspace = true
move-binary-format.workspace = true

move-core-types.workspace = true
fastcrypto = { workspace = true }
workspace-hack.workspace = true

move-bytecode-utils = { git = "https://github.com/MystenLabs/sui", rev = "23c02802c858da6b396fa9f9acf47c72b64367bc", package = "move-bytecode-utils" }


[dev-dependencies]
test-fuzz.workspace = true
scalar-types = { workspace = true, features = ["test-utils"] }
#sui-move-build.workspace = true
