[package]
name = "scalar-network"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anemo.workspace = true
anemo-tower.workspace = true
governor.workspace = true
serde.workspace = true
tonic.workspace = true
dashmap.workspace = true
tower.workspace = true

scalar-archival.workspace = true
scalar-storage.workspace = true
scalar-types.workspace = true
scalar-config.workspace = true
scalar-swarm-config.workspace = true

mysten-network.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
futures.workspace = true
tap.workspace = true
rand.workspace = true
anyhow.workspace = true
prometheus.workspace = true
mysten-metrics.workspace = true
workspace-hack.workspace = true

[build-dependencies]
anemo-build.workspace = true
tonic-build.workspace = true

[dev-dependencies]
telemetry-subscribers.workspace = true
tokio = { workspace = true, features = ["test-util"] }
ed25519-consensus.workspace = true
fastcrypto = { workspace = true }
tempfile = "3.3.0"
