[package]
name = "scalar-node"
version.workspace = true
authors = ["Codelight <tai=@codelight.co>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]

anemo.workspace = true
anemo-tower.workspace = true
arc-swap.workspace = true
axum.workspace = true
anyhow.workspace = true
clap.workspace = true
jsonrpsee.workspace = true
prometheus.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
futures.workspace = true
tower.workspace = true
reqwest.workspace = true
tap.workspace = true
serde.workspace = true
snap.workspace = true
git-version.workspace = true
const-str.workspace = true
url.workspace = true
humantime.workspace = true

scalar-archival.workspace = true
scalar-config.workspace = true
scalar-types.workspace = true
scalar-core.workspace = true
scalar-json-rpc.workspace = true
scalar-kvstore.workspace = true
scalar-network.workspace = true
scalar-storage.workspace = true
scalar-snapshot.workspace = true
scalar-telemetry.workspace = true
scalar-consensus-adapter.workspace = true

sui-macros.workspace = true
sui-protocol-config.workspace = true
sui-tls.workspace = true

mysten-metrics.workspace = true
mysten-common.workspace = true
narwhal-network.workspace = true
typed-store.workspace = true
mysten-network.workspace = true
telemetry-subscribers.workspace = true
fastcrypto.workspace = true
fastcrypto-zkp.workspace = true
workspace-hack.workspace = true

#[target.'cfg(msim)'.dependencies]
#sui-simulator.workspace = true
