[package]
name = "scalar-node"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anemo.workspace = true
anemo-tower.workspace = true
arc-swap.workspace = true
axum.workspace = true
anyhow.workspace = true
clap.workspace = true
prometheus.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
futures.workspace = true
tower.workspace = true
reqwest.workspace = true
tap.workspace = true
serde.workspace = true
snap.workspace = true
git-version.workspace = true
const-str.workspace = true
url.workspace = true
humantime.workspace = true

scalar-core = { path = "../scalar-core" }
scalar-kvstore = { path = "../scalar-kvstore" }
sui-json-rpc = { path = "../scalar-json-rpc", package = "scalar-json-rpc" }
sui-rest-api = { path = "../scalar-rest-api", package = "scalar-rest-api" }
sui-telemetry = { path = "../scalar-telemetry", package = "scalar-telemetry" }
sui-archival = { path = "../../sui/crates/sui-archival" }
sui-tls = { path = "../../sui/crates/sui-tls" }
sui-macros = { path = "../../sui/crates/sui-macros" }
sui-config = { path = "../../sui/crates/sui-config" }
sui-storage = { path = "../../sui/crates/sui-storage" }
sui-network = { path = "../../sui/crates/sui-network" }
sui-json-rpc-api = { path = "../../sui/crates/sui-json-rpc-api" }
sui-protocol-config = { path = "../../sui/crates/sui-protocol-config" }
sui-snapshot = { path = "../../sui/crates/sui-snapshot" }
sui-types = { path = "../../sui/crates/sui-types" }
sui-kvstore = { path = "../../sui/crates/sui-kvstore" }
mysten-metrics = { path = "../../sui/crates/mysten-metrics" }
mysten-common = { path = "../../sui/crates/mysten-common" }
narwhal-network = { path = "../../sui/narwhal/network" }
typed-store = { path = "../../sui/crates/typed-store" }
mysten-network = { path = "../../sui/crates/mysten-network" }
telemetry-subscribers = { path = "../../sui/crates/telemetry-subscribers" }

fastcrypto.workspace = true
fastcrypto-zkp.workspace = true
workspace-hack = { path = "../../sui/crates/workspace-hack" }

[target.'cfg(msim)'.dependencies]
sui-simulator = { path = "../../sui/crates/sui-simulator" }
