[package]
name = "scalar-relayer"
version = "0.0.0"
authors = ["Codelight <tai@codelight.co>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
serde.workspace = true
serde_repr.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
eyre.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }
bcs.workspace = true

[dev-dependencies]
[target.'cfg(not(target_env = "msvc"))'.build-dependencies]
protobuf-src.workspace = true

[build-dependencies]
prost-build.workspace = true
rustversion.workspace = true
tonic-build.workspace = true
anemo-build.workspace = true